--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -11,13 +11,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"src\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\\\research'"
+       "'d:\\\\DL_Project using MLflow_DVC\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC'"
+       "'d:\\\\DL_Project using MLflow_DVC\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC'"
       ]
      },
      "execution_count": 4,
@@ -78,17 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cnnClassifier.constants import *\n",
-    "from cnnClassifier.utils.common import read_yaml, create_directories"
+    "from cnnClassifier.utils.common import read_yaml, create_directories\n",
+    "\n",
+    "# the above is a method of importing/calling functions from the respective folders/files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,18 +196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-01 23:04:15,151: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-01 23:04:15,153: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-01 23:04:15,154: INFO: common: created directory at: artifacts]\n",
-      "[2023-10-01 23:04:15,155: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-10-01 23:04:15,156: INFO: 586056171: Downloading data from https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-04-18 21:50:36,036: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-04-18 21:50:36,347: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-04-18 21:50:36,366: INFO: common: created directory at: artifacts]\n",
+      "[2025-04-18 21:50:36,368: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-04-18 21:50:36,369: INFO: 586056171: Downloading data from https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -203,17 +215,17 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (uriginal): https://drive.google.com/uc?/export=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY\n",
-      "From (redirected): https://drive.google.com/uc?/export=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY&confirm=t&uuid=76a3e216-983a-4573-8967-9278c5140235\n",
-      "To: d:\\Bappy\\YouTube\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 49.0M/49.0M [01:24<00:00, 580kB/s]"
+      "From (original): https://drive.google.com/uc?/export=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY&confirm=t&uuid=e4d927c4-b2a8-4e9b-aedb-fcd9391f2142\n",
+      "To: d:\\DL_Project using MLflow_DVC\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:41<00:00, 1.19MB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-01 23:05:41,982: INFO: 586056171: Downloaded data from https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-04-18 21:51:23,305: INFO: 586056171: Downloaded data from https://drive.google.com/file/d/1z0mreUtRmR-P-magILsDR3T7M6IkGXtY/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -245,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chest",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
